# eggmock

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  asd.rs  main.cpp
crates/eggmock/: Cargo.toml
crates/eggmock-gen/: Cargo.toml
crates/eggmock-gen/src/: main.rs
crates/eggmock/src/: gen.rs  lib.rs  macros.rs  network.rs  rewrite.rs
examples/: .gitignore  CMakeLists.txt
examples/mig_rewrite/: CMakeLists.txt  main.cpp
examples/mig_rewrite/eggmock-example-mig/: Cargo.toml
examples/mig_rewrite/eggmock-example-mig/src/: lib.rs
examples/mig_rewrite/rs/: Cargo.toml  build.rs
examples/mig_rewrite/rs/src/: lib.rs
include/eggmock/: generated.h
src/: egg_impls.rs  lib.rs  macros.rs  network.rs  rewrite.rs  transfer.rs
src/network/: backwards.rs  mod.rs  provider.rs
